<resources>
    <string name="app_name">GoCekVO2MAX</string>
    <string name="gocek_vo2max">GoCek VO2MAX</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="min">Min</string>
    <string name="_0_0">0.00</string>
    <string name="km">KM</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="vo2max">VO2MAX</string>
    <string name="history">History</string>
    <string name="heart_rate_monitor">Heart Rate Monitor</string>
    <string name="we_re_almost_there">We\'re almost there...</string>
    <string name="calculating_your_heart_rate">Calculating your heart rate</string>
    <string name="please_place_you_finger_in_the_camera">Please place you finger in the camera</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="hi_members">Hi Members,</string>
    <string name="let_s_run">Let\'s Run!</string>
    <string name="gocek">GoCek</string>
    <string name="aplikasi_untuk_memprediksi_kapasitas_nvolume_oksigen_maksimal">Application for calculating the oxygen \ncapacity volume level</string>
    <string name="vo2max_prediction">VO2MAX Prediction</string>
    <string name="rock_port_test">Rock Port</string>
    <string name="_1600_meter">1600 Meter</string>
    <string name="of_walking">of Walking</string>
    <string name="balke_test">Balke</string>
    <string name="_15_minute">15 Minute</string>
    <string name="your_oxygen_level">Your Oxygen Level</string>
    <string name="_40_56">40.56</string>
    <string name="status">Status</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="birthdate">BirthDate</string>
    <string name="athletic_state">Athletic State</string>
    <string name="edit">Edit</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city_of_birth">City of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="are_you_an_athlete">Are you an Athlete?</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="hi">Hi!</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="value">Value</string>
    <string name="ml_kg">ml/kg/m</string>

    <string-array name="athlete_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="language_options">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>
    <string name="choose_the_language">Choose the language</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="all_fields_must_be_filled">All fields must be filled</string>
    <string name="invalid_email_type">Invalid email type</string>
    <string name="password_must_have_at_least_6_characters_with_at_least_1_number">Password must have at least 6 characters with at least 1 number</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="you_need_to_enable_gps_to_use_this_application">You need to enable GPS to use this application</string>
    <string name="please_place_your_fingertip_on_the_camera">Please place your fingertip on the camera.</string>
    <string name="vo2max_categories">Vo2max Categories</string>
    <string name="kg">" kg"</string>
    <string name="years_old">years old</string>
    <string name="athlete">Athlete</string>
    <string name="non_athlete">Non Athlete</string>
    <string name="please_fill_your_profile_correctly">Please fill your profile correctly</string>
    <string name="please_accept_the_required_permissions_for_location_and_camera_to_proceed">Please accept the required permissions for location and camera to proceed.</string>
    <string name="oxygen_level">Oxygen Level Report</string>
    <string name="grant_camera_permission_to_enable_the_feature">Grant camera permission to enable the feature</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="location_permission">Location Permission</string>
    <string name="grant_location_permission_to_enable_the_feature">Grant location permission to enable the feature</string>
    <string name="user_profile">User Profile</string>
    <string name="ensure_your_profile_is_fully_filled_out_before_starting_tracking_to_accurately_calculate_oxygen_levels">Ensure your profile is fully filled out before starting tracking to accurately calculate oxygen levels</string>
    <string name="initiate_tracking_with_a_simple_tap_on_the_start_button">Initiate tracking with a simple tap on the \'Start\' button</string>
    <string name="position_your_finger_on_the_camera_to_measure_the_heart_rate">Position your finger on the camera to measure the heart rate</string>
    <string name="after_completion_view_your_oxygen_level">After completion, view your oxygen level</string>
    <string name="of_running">of Running</string>
    <string name="tutorial">Tutorial</string>
    <string name="discover_the_step_by_step_tutorial_on_predicting_balke_vo2max">Discover the step-by-step tutorial on predicting Balke Vo2max</string>
    <string name="balke_tutorial">Balke Tutorial</string>
    <string name="discover_the_step_by_step_tutorial_on_predicting_rock_port_vo2max">Discover the step-by-step tutorial on predicting Rock Port Vo2max</string>
    <string name="rock_port_tutorial">Rock Port Tutorial</string>
    <string name="click_on_the_rock_port_section_to_calculate_your_vo2max_through_a_1600_meter_walking">Click on the Rock Port section to calculate your Vo2max through a 1600-meter walking</string>
    <string name="rock_port">Rock Port</string>
    <string name="you_can_click_the_stop_button_to_stop_the_rock_port_test_before_completing_the_1600_meter_distance">You can click the stop button to stop the Rock Port test before completing the 1600-meter distance</string>
    <string name="back_to_home">Back To Home</string>
    <string name="tap_the_home_icon_to_return_to_the_main_page">Tap the home icon to return to the main page</string>
    <string name="click_on_the_balke_section_to_calculate_your_vo2max_through_a_15_minutes_running">Click on the Balke section to calculate your Vo2max through a 15-minutes running</string>
    <string name="you_can_click_the_stop_button_to_stop_the_balke_test_before_completing_the_15_minutes_duration">You can click the stop button to stop the Balke test before completing the 15-minutes duration</string>
    <string name="date">Date</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_not_finished">Not Finished</string>
    <string name="dialog_not_finished_rp">You must complete 1.6 km to finish</string>
    <string name="dialog_not_finished_bk">You must complete 15 minute to finish</string>
</resources>