<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".rockport.RockPortTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:elevation="0dp"
        android:padding="18dp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leaguespartan_semibold"
            android:text="@string/gocek_vo2max"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/appBar">

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:text="@string/_0_0"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:text="@string/km"
            android:textAlignment="center"
            android:textColor="@color/light_gray_text"
            android:textSize="14sp" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/oswald"
            android:text="@string/_00_00_00"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:text="@string/min"
            android:textAlignment="center"
            android:textColor="@color/light_gray_text"
            android:textSize="12sp" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:context=".MapsActivity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/oswald"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStop"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/oswald"
        android:text="@string/stop"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="35dp"-->
    <!--        android:gravity="center_horizontal"-->
    <!--        android:orientation="horizontal"-->
    <!--        map:layout_constraintBottom_toBottomOf="parent"-->
    <!--        map:layout_constraintEnd_toEndOf="parent"-->
    <!--        map:layout_constraintStart_toStartOf="parent">-->

    <!--        <androidx.appcompat.widget.AppCompatButton-->
    <!--            android:id="@+id/btn_pause"-->
    <!--            android:layout_width="120dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/gradient_button"-->
    <!--            android:fontFamily="@font/oswald"-->
    <!--            android:text="Pause"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="18sp"-->
    <!--            android:visibility="gone"-->
    <!--            map:layout_constraintBottom_toBottomOf="parent"-->
    <!--            map:layout_constraintEnd_toEndOf="parent"-->
    <!--            map:layout_constraintStart_toStartOf="parent" />-->

    <!--        <androidx.appcompat.widget.AppCompatButton-->
    <!--            android:id="@+id/btn_stop"-->
    <!--            android:layout_width="120dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/gradient_button"-->
    <!--            android:fontFamily="@font/oswald"-->
    <!--            android:text="Stop"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="18sp"-->
    <!--            android:visibility="gone"-->
    <!--            map:layout_constraintBottom_toBottomOf="parent"-->
    <!--            map:layout_constraintEnd_toEndOf="parent"-->
    <!--            map:layout_constraintStart_toStartOf="parent" />-->

    <!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>